--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-    <a href="../site_fotovoltaico/html/intelbras_placas.html">Placas Solares</a>
-    <a href="../site_fotovoltaico/html/Componentes.html">Componentes</a>
-    <a href="../site_fotovoltaico/html/conceito1.html">Entrada Digital</a>
-    <a href="../site_fotovoltaico/html/conceito2.html">Arduino</a>
-    <a href="../site_fotovoltaico/html/conceito3.html">Multímetro</a>
-    <a href="../site_fotovoltaico/html/conceito4.html">Projeto Arduino</a>
-    <a href="../site_fotovoltaico/html/Projeto_solid.html">Projeto Solid</a>
-    <a href="../site_fotovoltaico/html/Conclusão.html">Conclusão</a>
+    <a href="./html/intelbras_placas.html">Placas Solares</a>
+    <a href="./html/Componentes.html">Componentes</a>
+    <a href="./html/conceito1.html">Entrada Digital</a>
+    <a href="./html/conceito2.html">Arduino</a>
+    <a href="./html/conceito3.html">Multímetro</a>
+    <a href="./html/conceito4.html">Projeto Arduino</a>
+    <a href="./html/Projeto_solid.html">Projeto Solid</a>
+    <a href="./html/Conclusão.html">Conclusão</a>
         </nav>
     </header>
     <main>
